Display notification including sound
Fixes #4

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,7 +34,7 @@
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:onClick="asd"
+        android:onClick="triggerAlarm"
         android:text="Button"
         tools:text="asdasd" />
 
