--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -7,4 +7,10 @@
         android:orderInCategory="100"
         android:title="@string/action_settings"
         app:showAsAction="never" />
+    <item
+        android:id="@+id/action_new_template"
+        android:icon="@drawable/alarm_add"
+        android:orderInCategory="200"
+        android:title="@string/action_new_template"
+        app:showAsAction="ifRoom" />
 </menu>
