--- a/app/src/main/res/layout/activity_new_template.xml
+++ b/app/src/main/res/layout/activity_new_template.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <TextView
@@ -38,7 +38,7 @@
         android:id="@+id/btnSave"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:onClick="newTemplate"
+        android:onClick="saveTemplate"
         android:text="@android:string/ok" />
 
 </LinearLayout>
