ListView for Templates
Fixes #1

--- a/app/src/main/res/layout/activity_maintain_templates.xml
+++ b/app/src/main/res/layout/activity_maintain_templates.xml
@@ -5,11 +5,11 @@
     android:layout_height="match_parent"
     tools:context=".MaintainTemplatesActivity">
 
-    <TextView
-        android:id="@+id/lblContent"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="TextView"
-        tools:layout_editor_absoluteX="19dp"
-        tools:layout_editor_absoluteY="16dp" />
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" >
+
+    </androidx.recyclerview.widget.RecyclerView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
