Keep track of running Reminder
Also cancel reminder

Fixes #2
Fixes #14

--- a/app/src/main/res/layout/activity_maintain_templates.xml
+++ b/app/src/main/res/layout/activity_maintain_templates.xml
@@ -7,7 +7,6 @@
     tools:context=".MaintainTemplatesActivity">
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/btnNewTemplate"
         android:layout_width="wrap_content"
         android:layout_height="56dp"
         android:layout_marginEnd="16dp"
@@ -15,12 +14,12 @@
         android:clickable="true"
         android:focusable="true"
         android:onClick="goToNewReminder"
-        app:layout_constraintBottom_toBottomOf="@+id/recyclerView"
-        app:layout_constraintEnd_toEndOf="@+id/recyclerView"
+        app:layout_constraintBottom_toBottomOf="@+id/rvTemplates"
+        app:layout_constraintEnd_toEndOf="@+id/rvTemplates"
         app:srcCompat="@android:drawable/ic_menu_add" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView"
+        android:id="@+id/rvTemplates"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
