--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,11 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="mauz.toto.reminder.MainActivity">
     <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:title="@string/action_settings"
-        app:showAsAction="never" />
-    <item
         android:id="@+id/action_new_template"
         android:icon="@drawable/alarm_add"
         android:orderInCategory="200"
@@ -15,8 +10,19 @@
         app:showAsAction="ifRoom" />
     <item
         android:id="@+id/action_list_templates"
-        android:icon="@drawable/list"
+        android:icon="@drawable/list_templates"
         android:orderInCategory="300"
         android:title="@string/action_list_templates"
         app:showAsAction="ifRoom" />
+    <item
+        android:id="@+id/action_list_reminder"
+        android:icon="@drawable/list_templates"
+        android:orderInCategory="400"
+        android:title="@string/action_list_reminder"
+        app:showAsAction="ifRoom" />
+    <item
+        android:id="@+id/action_settings"
+        android:orderInCategory="500"
+        android:title="@string/action_settings"
+        app:showAsAction="never" />
 </menu>
