--- a/app/src/main/res/layout/reminder_view.xml
+++ b/app/src/main/res/layout/reminder_view.xml
@@ -26,7 +26,7 @@
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:text="-HH:mm" />
+        tools:text="-HH:mm:ss" />
 
     <View
         android:layout_width="match_parent"
