Validate input with TextWatcher

--- a/app/src/main/res/layout/activity_new_template.xml
+++ b/app/src/main/res/layout/activity_new_template.xml
@@ -33,6 +33,7 @@
         android:inputType="time" />
 
     <Button
+        android:id="@+id/btnSave"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:onClick="saveTemplate"
